# AuCAD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  imgui.ini
.zed/: settings.json
assets/: armadillo.ply  quist.ply
shaders/: axis.fs.glsl  axis.vs.glsl  default.fs.glsl  default.vs.glsl  shader.fs.glsl  shader.vs.glsl
src/: Engine.cpp  Engine.hpp  Interface.cpp  Interface.hpp  Renderer.cpp  Renderer.hpp  Trackball.cpp  Trackball.hpp  main.cpp
src/GenAPI/: GenAPI.cpp  GenAPI.hpp
src/Gizmo/: Gizmo.cpp  Gizmo.hpp
src/Mesh/: MeshBuffer.cpp  MeshData.cpp  MeshData.hpp  MeshProcessor.cpp  MeshSelection.cpp  MeshVisualization.cpp
src/Object/: Axis.cpp  Axis.hpp  BaseObject.cpp  BaseObject.hpp  Loader.hpp  Mesh.cpp  Mesh.hpp  Plane.cpp  Plane.hpp  PointCloud.cpp  PointCloud.hpp  Wireframe.cpp  Wireframe.hpp
src/Object/Gizmo/: Gizmo.cpp  Gizmo.hpp
src/Object/Utilities/: HalfEdge.hpp  MeshData.cpp  MeshData.hpp  MeshProcessor.cpp  MeshSelection.cpp  MeshVisualization.cpp
src/Utilities/: Shader.hpp
src/Visualizer/: Axis.cpp  Axis.hpp  Mesh.cpp  Mesh.hpp  PointCloud.cpp  PointCloud.hpp  Wireframe.cpp  Wireframe.hpp
